--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-NotoSansJP-Regular SDF.asset filter=lfs diff=lfs merge=lfs -text
+Assets/TextMesh Pro/Fonts/NotoSansJP-Regular SDF.asset filter=lfs diff=lfs merge=lfs -text
