--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-Assets/TextMesh Pro/Fonts/NotoSansJP-Regular SDF.asset filter=lfs diff=lfs merge=lfs
+Assets/TextMeshPro/Fonts/NotoSansJP-RegularSDF.asset filter=lfs diff=lfs merge=lfs text
