--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-Assets/TextMeshPro/Fonts/NotoSansJP-RegularSDF.asset filter=lfs diff=lfs merge=lfs text
+Assets/TexMeshPro/Fonts/*.asset merge=unityyamlmerge eol=lf
